--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,11 @@
             "database"
         ],
         "psr-4": {
-            "App\\": "app/"
+            "App\\": "app/",
+            "Database\\": "database/",
+            "Controllers\\": "app/Http/Controllers",
+            "Models\\": "app/BlueDental/Models",
+            "Repositories\\": "app/BlueDental/Repositories"
         }
     },
     "autoload-dev": {
